[tool.poetry]
name = "aiprogramming"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.7.0"
mazelib = "^0.9.13"
seaborn = "^0.12.2"
ipykernel = "^6.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
